// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analog-page generator > should create analog page correctly > page 1`] = `
"import { Component } from '@angular/core';

@Component({
  standalone: true,
  imports: [],
  template: \` {{ home page works!! }} \`,
})
export default class HomePage {}
"
`;

exports[`analog-page generator > should create analog page with metadata correctly > page 1`] = `
"import { RouteMeta } from '@analogjs/router';
import { Component } from '@angular/core';

export const routeMeta: RouteMeta = {
  title: 'Home Page',
};

@Component({
  standalone: true,
  imports: [],
  template: \` {{ home page works!! }} \`,
})
export default class HomePage {}
"
`;

exports[`analog-page generator > should create analog page with redirect correctly > page 1`] = `
"import { RouteMeta } from '@analogjs/router';

export const routeMeta: RouteMeta = {
  redirectTo: '/home',
  pathMatch: 'full',
};
"
`;

exports[`analog-page generator > should create analog page with subfolder correctly > page 1`] = `
"import { Component } from '@angular/core';

@Component({
  standalone: true,
  imports: [],
  template: \` {{ post page works!! }} \`,
})
export default class PostPage {}
"
`;

exports[`analog-page generator > should create analog page with subfolder correctly > page 2`] = `
"import { Component } from '@angular/core';

@Component({
  standalone: true,
  imports: [],
  template: \` {{ products page works!! }} \`,
})
export default class ProductsPage {}
"
`;

exports[`analog-page generator > should create analog page with subfolder correctly > page 3`] = `
"import { Component } from '@angular/core';

@Component({
  standalone: true,
  imports: [],
  template: \` {{ productsProductId page works!! }} \`,
})
export default class ProductsProductIdPage {}
"
`;

exports[`analog-page generator > should create analog page with subfolder correctly > page 4`] = `
"import { Component } from '@angular/core';

@Component({
  standalone: true,
  imports: [],
  template: \` {{ blog page works!! }} \`,
})
export default class BlogPage {}
"
`;
